--- a/Examenes/examen2/auditorias/src/main/resources/public/index.html
+++ b/Examenes/examen2/auditorias/src/main/resources/public/index.html
@@ -151,7 +151,7 @@
                 <div class="row">
                     <div class="col-md-3 grid-margin stretch-card">
                         <div class="card">
-                            <a href="" style="text-decoration: none; color: black;">
+                            <a href="../listadoAuditores.html" style="text-decoration: none; color: black;">
                                 <div class="card-body" style="cursor: pointer">
                                     <p class="card-title text-md-center text-xl-left">Sales</p>
                                     <div class="d-flex flex-wrap justify-content-between justify-content-md-center justify-content-xl-between align-items-center">
